--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "pinia": "^2.0.11",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
@@ -27,6 +28,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "prettier": "^2.2.1",
+    "tailwindcss": "^3.0.23",
     "typescript": "~4.1.5"
   }
 }
